<?xml version="1.0" encoding="utf-8" standalone="no"?>

<!-- Copyright 2016-2020 Hauke Sommerfeld

     This file is part of the 'Vertretungsplan-App' project:
     https://github.com/haukesomm/Vertretungsplan-App

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <!-- General -->

    <string name="app_name">Vertretungsplan</string>
    <string name="app_name_full">Vertretungsplan-App</string>
    <string name="unknown">Unbekannt</string>


    <!-- Splash Activity -->

    <string name="activity_splash_eula_accept">Akzeptieren</string>
    <string name="activity_splash_eula_decline">Ablehnen</string>


    <!-- EndOfLife-Activity -->
    <string name="activity_end_of_life_headline">Vielen Dank für Eure Unterstützung!</string>
    <string name="activity_end_of_life_notice">Manchmal ist es an der Zeit, sich neuen Projekten
        zu widmen. Durch mein Studium und meine Arbeit als Softwareentwickler kann ich nicht mehr
        die Zeit in die Entwicklung der Vertretungsplan-App investieren wie noch zu meiner
        Schulzeit.\n\n
        Darüber hinaus verwendet das GymNW nun iServ, wodurch die App nicht mehr wie
        gewohnt funktioniert. Da ein Umbau sehr viel Zeit in Anspruch nehmen würde und
        wahrscheinlich nicht datenschutzkonform wäre, nutze ich diese Glegenheit, um die App
        in den wohlverdienten Ruhestand zu schicken.\n\n
        Id diesem Sinne: Ein großes Dankeschön an alle, die die Vertretungsplan-App in den Jahren
        von 2016 bis 2020 zu dem gemacht haben, was sie heute ist. Cheers!</string>
    <string name="activity_end_of_life_whatCanIDo_headline">Und jetzt?</string>
    <string name="activity_end_of_life_whatCanIDo_iserv_title">Schüler oder Elternteil?</string>
    <string name="activity_end_of_life_whatCanIDo_iserv_description">Der Vertretungsplan steht
        weiterhin über iServ zur Verfügung.</string>
    <string name="activity_end_of_life_whatCanIDo_github_title">Angehender Programmierer?</string>
    <string name="activity_end_of_life_whatCanIDo_github_description">Der Quellcode der App ist auf
        GitHub verfügbar und darf ausdrücklich selber angepasst werden ;-)</string>


    <!-- Main Activity and child Fragments -->

    <string name="activity_main_drawer_general">Allgemein</string>
    <string name="activity_main_drawer_other">Sonstiges</string>
    <string name="activity_main_drawer_other_homepage">Schulhomepage</string>
    <string name="activity_main_drawer_support_title">Gefällt Dir meine Arbeit?</string>
    <string name="activity_main_drawer_support_feedback">Bewerte die App</string>
    <string name="activity_main_reload">Neu laden</string>
    <string name="activity_main_reload_successful">Daten wurden aktualisiert</string>

    <string name="fragment_entries_plan_title">Einträge</string>
    <string name="fragment_entries_plan_day">Tag</string>
    <string name="fragment_entries_plan_grade">Klasse</string>
    <string name="fragment_entries_plan_changes_notAvailable">Für diese Klasse scheint der Unterricht normal stattzufinden.</string>
    <string name="fragment_entries_plan_courseFilter_active">Kursfilter aktiv!</string>
    <string name="fragment_entries_plan_courseFilter_turnOff_title">Kursfilter deaktivieren?</string>
    <string name="fragment_entries_plan_courseFilter_turnOff_posButton">Deaktivieren</string>
    <string name="fragment_entries_plan_courseFilter_turnOff_negButton">Abbrechen</string>

    <string name="fragment_messages_plan_title">Nachrichten</string>
    <string name="fragment_messages_plan_nothingAvailable">Falls im Vertretungsplan Nachrichten für Schüler oder Eltern stehen (\"Nachrichten zum Tag\"), werden diese hier angezeigt.</string>

    <string name="adapter_grade_default">Standard</string>
    <string name="adapter_grade_senior">Oberstufe</string>

    <string name="adapter_planEntry_cancellation">Ausfall</string>
    <string name="adapter_planEntry_roomRormat">Raum %1$s</string>


    <!-- Misc: PlanDownloader Error Dialog -->

    <string name="dialog_downloader_plan_error_title">Der Vertretungsplan kann nicht geladen werden!</string>
    <string name="dialog_downloader_plan_error_text">Entweder ist der Vertretungsplan zur Zeit nicht erreichbar oder Dein Gerät ist nicht mit dem Internet verbunden.</string>
    <string name="dialog_downloader_plan_error_cancel">Abbrechen</string>
    <string name="dialog_downloader_plan_error_reload">Neu laden</string>
    <string name="dialog_downloader_plan_error_website">Schulhomepage</string>


    <!-- Reminder Activity -->

    <string name="activity_reminder">Erinnerungsregeln</string>
    <string name="activity_reminder_hint_text">Wird eine Erinnerungsregel bestehend aus einer Uhrzeit und einer Klasse angelegt, überprüft die App jeden Tag zu dieser Uhrzeit, ob in einem der Pläne Änderungen für die Klasse stehen. Falls ja, wird eine Benachrichtigung gesendet.</string>
    <string name="activity_reminder_create_title">Neue Erinnerungsregel</string>
    <string name="activity_reminder_create_grade_info">Für welche Klasse soll die Erinnerungsregel erstellt werden?</string>
    <string name="activity_reminder_create_time_info">Zu welcher Uhrzeit sollen die Pläne täglich auf Einträge überprüft werden?</string>
    <string name="activity_reminder_create_schedule">Erstellen</string>
    <string name="activity_reminder_create_help">Hilfe</string>
    <string name="activity_reminder_emptyText">Tippe aus das Plus, um eine Erinnerungsregel anzulegen.</string>
    <string name="activity_reminder_delete_confirm_title">Soll diese Erinnerungsregel wirklich gelöscht werden?</string>
    <string name="activity_reminder_rules_delete_confirm_action">Löschen</string>
    <string name="activity_reminder_rules_delete_keep">Behalten</string>

    <string name="adapter_fetchrule_gradeFormat_default">Klasse %1$s</string>
    <string name="adapter_fetchrule_gradeFormat_senior">Jahrgang %1$s</string>
    <string name="adapter_fetchrule_timeFormat">Täglich um %02d:%02d Uhr</string>


    <!-- Info Activity -->

    <string name="activity_info">Über die App</string>
    <string name="activity_info_dev">Mehr vom Entwickler</string>
    <string name="activity_info_dev_copyright">\u00A9 2016–2020 Hauke Sommerfeld\nAlle Rechte vorbehalten.</string>
    <string name="activity_info_dev_github">GitHub</string>
    <string name="activity_info_dev_googlePlay">Google Play</string>
    <string name="activity_info_general">Generelle Informationen</string>
    <string name="activity_info_general_buildType">Build</string>
    <string name="activity_info_general_version">Version</string>


    <!-- Preferences -->

    <string name="activity_preferences">Einstellungen</string>

    <string name="fragment_preferences_general_category">Allgemein</string>
    <string name="fragment_preferences_general_rememberGrade_title">Zuletzt ausgewählte Klasse merken</string>
    <string name="fragment_preferences_general_darkModeBehavior_title">Dunkles Design benutzen</string>
    <string-array name="fragment_preferences_general_darkModeBehavior_entryTitles">
        <item>Nach dem System richten</item>
        <item>Immer</item>
        <item>Niemals</item>
    </string-array>

    <string name="fragment_preferences_senior_category">Oberstufe</string>
    <string name="fragment_preferences_senior_enableFilter">Kursfilter aktivieren</string>
    <!--<string name="fragment_preferences_senior_filterEnabled">Kursfilter aktiv!</string>-->
    <string name="fragment_preferences_senior_courses_title">Meine Kurse</string>
    <string name="fragment_preferences_senior_courses_hint">z.B. ma4, de5 oder EN2</string>
    <string name="fragment_preferences_senior_courses_add_title">Neuen Kurs hinzufügen</string>
    <string name="fragment_preferences_senior_courses_add_save">Speichern</string>
    <string name="fragment_preferences_senior_courses_add_cancel">Verwerfen</string>
    <string name="fragment_preferences_senior_courses_empty">Tippe, um einen Kurs hinzuzufügen</string>

    <string name="fragment_preferences_notifications_title">Benachrichtigungen</string>
    <string name="fragment_preferences_notifications_silenceOnWeekend_title">Am Wochenende stummschalten</string>
    <string name="fragment_preferences_notifications_silenceOnWeekend_summary">Samstags und Sonntags</string>
    <string name="fragment_preferences_notifications_channelSettings_title">Benachrichtigungen anpassen</string>
    <string name="fragment_preferences_notifications_channelSettings_summary">Hierfür werden die Systemeinstellungen geöffnet</string>
    <string name="fragment_preferences_notifications_light">LED</string>
    <string name="fragment_preferences_notifications_sound">Ton</string>
    <string name="fragment_preferences_notifications_vibrate">Vibration</string>


    <!-- Notification Channels -->

    <string name="notifications_channel_plan_title">Ausfall und Änderungen</string>
    <string name="notifications_channel_sync_description">Dieser Notification-Channel sollte nicht verändert werden.</string>
    <string name="notifications_channel_sync_title">Synchronisierung</string>
    <string name="notifications_fetch_changesAvailable_format">Änderungen verfügbar für %1$s</string>
    <string name="notifications_fetch_loading">Lade Vertretungsplan…</string>
    <string name="notifications_fetch_openAppForMore">Öffne die App, um mögliche Ausfälle zu sehen.</string>
    <string name="notifications_silentMode">Stummschalten</string>
    <string name="notifications_silentMode_info">Solange dieser Modus aktiv ist, werden keine Plan-Benachrichtigungen gesendet.</string>
</resources>
