<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright 2016-2019 Hauke Sommerfeld

     This file is part of the 'Vertretungsplan-App' project:
     https://github.com/haukesomm/Vertretungsplan-App

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/activity_main_drawer_general">

        <menu>

            <item
                android:id="@+id/drawer_activity_plan_reminder"
                android:title="@string/activity_reminder"
                android:icon="@drawable/ic_notifications"/>

            <item
                android:id="@+id/drawer_activity_plan_silentmode"
                android:title="@string/notifications_silentMode"
                android:icon="@drawable/ic_notifications_off"
                app:actionLayout="@layout/activity_plan_navigation_silentmode"/>

            <item
                android:id="@+id/drawer_activity_plan_preferences"
                android:title="@string/activity_preferences"
                android:icon="@drawable/ic_settings"/>

            <item
                android:id="@+id/drawer_activity_plan_about"
                android:title="@string/activity_info"
                android:icon="@drawable/ic_info"/>

        </menu>

    </item>

    <item
        android:title="@string/activity_main_drawer_other">

        <menu>

            <item
                android:id="@+id/drawer_activity_homepage"
                android:title="@string/activity_main_drawer_other_homepage"
                android:icon="@drawable/ic_open_externally"/>

        </menu>

    </item>

    <item
        android:title="@string/activity_main_drawer_support_title">

        <menu>

            <item
                android:id="@+id/drawer_activity_plan_rate"
                android:title="@string/activity_main_drawer_support_feedback"
                android:icon="@drawable/ic_favorite"/>

        </menu>

    </item>

</menu>