<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright 2016-2019 Hauke Sommerfeld

     This file is part of the 'Vertretungsplan-App' project:
     https://github.com/haukesomm/Vertretungsplan-App

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="118dp"
                android:layout_height="118dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/img_logo"
                android:contentDescription="@string/app_name"/>

            <de.haukesomm.vertretungsplan.ui.VertretungsplanFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_gravity="center_horizontal"
                style="@style/Text.Title.Primary"
                android:text="@string/app_name_full"
                android:maxLines="1"
                android:ellipsize="end"/>

            <View
                style="@style/Divider"
                android:layout_marginTop="@dimen/margin_small"/>

            <TextView
                style="@style/Subheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_list_text"
                android:text="@string/activity_info_general"/>

            <!-- TODO Als eigenen View implementieren -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_list_two"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/activity_info_version_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/indent_list_text"
                    style="@style/Text.Body2.Primary"
                    android:text="@string/activity_info_general_version"/>

                <TextView
                    android:id="@+id/activity_info_version_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/activity_info_version_title"
                    android:layout_marginStart="@dimen/indent_list_text"
                    style="@style/Text.Body1.Secondary"
                    android:text="@string/unknown"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_list_two"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/activity_info_buildType_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/indent_list_text"
                    style="@style/Text.Body2.Primary"
                    android:text="@string/activity_info_general_buildType"/>

                <TextView
                    android:id="@+id/activity_info_buildType_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/activity_info_buildType_title"
                    android:layout_marginStart="@dimen/indent_list_text"
                    style="@style/Text.Body1.Secondary"
                    android:text="@string/unknown"/>

            </RelativeLayout>

            <View
                style="@style/Divider"
                android:layout_marginTop="@dimen/margin_small"/>

            <TextView
                style="@style/Subheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_list_text"
                android:text="@string/activity_info_dev"/>

            <!-- TODO Als eigenen View implementieren -->
            <RelativeLayout
                android:id="@+id/activity_info_playStore"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_list_two"
                android:gravity="center_vertical"
                android:background="?android:selectableItemBackground">

                <ImageView
                    style="@style/ListDrawablePrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_playstore"
                    android:contentDescription="@string/activity_info_dev_googlePlay"/>

                <ImageView
                    android:id="@+id/activity_info_playStore_supportDrawable"
                    style="@style/ListDrawableSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_open_externally"
                    android:contentDescription="@string/activity_info_dev_googlePlay"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/indent_list_text"
                    android:layout_toStartOf="@id/activity_info_playStore_supportDrawable"
                    style="@style/Text.Body2.Primary"
                    android:text="@string/activity_info_dev_googlePlay"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_info_gitHub"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_list_two"
                android:gravity="center_vertical"
                android:background="?android:selectableItemBackground">

                <ImageView
                    style="@style/ListDrawablePrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_github"
                    android:contentDescription="@string/activity_info_dev_github"/>

                <ImageView
                    android:id="@+id/activity_info_gitHub_supportDrawable"
                    style="@style/ListDrawableSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_open_externally"
                    android:contentDescription="@string/activity_info_dev_github"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/indent_list_text"
                    android:layout_toStartOf="@id/activity_info_gitHub_supportDrawable"
                    style="@style/Text.Body2.Primary"
                    android:text="@string/activity_info_dev_github"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_default"
                android:layout_marginStart="@dimen/indent_list_text"
                android:layout_marginEnd="@dimen/margin_default"
                style="@style/Text.Body1.Secondary"
                android:text="@string/activity_info_dev_copyright"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>