<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.haukesomm.vertretungsplan.ui.VertretungsplanFontTextView
                style="@style/Text.Headline.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:text="@string/activity_end_of_life_headline"
                android:lineSpacingMultiplier="1.3"/>

            <TextView
                style="@style/Text.Body1.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="@string/activity_end_of_life_notice"
                android:lineSpacingMultiplier="1.3"/>

            <de.haukesomm.vertretungsplan.ui.VertretungsplanFontTextView
                style="@style/Text.Headline.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:text="@string/activity_end_of_life_whatCanIDo_headline"
                android:lineSpacingMultiplier="1.3"/>

            <RelativeLayout
                android:id="@+id/activity_end_of_life_openWebsite"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_list_two"
                android:layout_marginTop="@dimen/margin_default"
                android:gravity="center_vertical"
                android:background="?android:selectableItemBackground">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_school"
                    android:contentDescription="@string/activity_info_dev_googlePlay"
                    app:tint="@color/colorAccent" />

                <ImageView
                    android:id="@+id/activity_end_of_life_openWebsite_supportDrawable"
                    style="@style/ListDrawableSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_open_externally"
                    android:contentDescription="@string/activity_info_dev_googlePlay"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:layout_toStartOf="@id/activity_end_of_life_openWebsite_supportDrawable">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="86dp"
                        style="@style/Text.Subheading.Primary"
                        android:text="@string/activity_end_of_life_whatCanIDo_iserv_title"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="86dp"
                        style="@style/Text.Body1.Primary"
                        android:text="@string/activity_end_of_life_whatCanIDo_iserv_description"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_end_of_life_openGitHub_"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_list_two"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginBottom="@dimen/margin_default"
                android:gravity="center_vertical"
                android:background="?android:selectableItemBackground">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_github"
                    android:contentDescription="@string/activity_info_dev_googlePlay"
                    app:tint="@color/colorAccent" />

                <ImageView
                    android:id="@+id/activity_end_of_life_openGitHub_supportDrawable"
                    style="@style/ListDrawableSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_open_externally"
                    android:contentDescription="@string/activity_info_dev_googlePlay"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:layout_toStartOf="@id/activity_end_of_life_openGitHub_supportDrawable">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="86dp"
                        style="@style/Text.Subheading.Primary"
                        android:text="@string/activity_end_of_life_whatCanIDo_github_title"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="86dp"
                        style="@style/Text.Body1.Primary"
                        android:text="@string/activity_end_of_life_whatCanIDo_github_description"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>